tests/baselines/reference/symbolProperty9.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty9.ts(10,5): error TS2322: Type 'I' is not assignable to type 'C'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '{ x: any; }' is not assignable to type '{ x: any; y: any; }'.
      Property 'y' is missing in type '{ x: any; }'.


==== tests/cases/conformance/es6/Symbols/symbolProperty9.ts (1 errors) ====
    class C {
        [Symbol.iterator]: { x; y };
    }
    interface I {
        [Symbol.iterator]: { x };
    }
    
    var i: I;
    i = new C;
    var c: C = i;
        ~
!!! error TS2322: Type 'I' is not assignable to type 'C'.
!!! error TS2322:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2322:     Type '{ x: any; }' is not assignable to type '{ x: any; y: any; }'.
!!! error TS2322:       Property 'y' is missing in type '{ x: any; }'.